--- a/Projects/WindTunnel.html
+++ b/Projects/WindTunnel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Closed Circuit Subsonic Wind Tunnel | Project - Amrit Thapa</title>
+  <title>Closed-Circuit Wind Tunnel Design | Project - Amrit Thapa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
@@ -22,7 +22,7 @@
     }
     .project-hero {
       background-color: #e6ecf3;
-      padding: 3rem 2rem;
+      padding: 3rem 2rem 2rem 2rem;
       text-align: center;
     }
     .project-hero h1 {
@@ -31,68 +31,242 @@
     }
     .project-image {
       width: 100%;
-      max-width: 500px;
+      max-width: 360px;
       height: auto;
       object-fit: contain;
       border: 1px solid #ccc;
-      border-radius: 6px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      margin-bottom: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.10);
+      margin-bottom: 0.5rem;
+      transition: transform .2s;
+      background: #fff;
     }
     .img-caption {
-      font-size: 0.9rem;
-      color: #555;
-      margin-bottom: 2rem;
+      font-size: 0.93rem;
+      color: #666;
+      margin-bottom: 1.5rem;
+      min-height: 38px;
+    }
+    .card-img-hover:hover .project-image {
+      transform: scale(1.04);
+      box-shadow: 0 6px 24px rgba(0,0,0,0.13);
+      border-color: #0d6efd;
+    }
+    .gallery-row {
+      row-gap: 2rem;
+      margin-bottom: 1.3rem;
+    }
+    .scroll-top {
+      display: none;
+      position: fixed;
+      bottom: 35px;
+      right: 30px;
+      z-index: 99;
+      font-size: 20px;
+      border: none;
+      outline: none;
+      background-color: #0d6efd;
+      color: white;
+      cursor: pointer;
+      border-radius: 50%;
+      width: 45px;
+      height: 45px;
+      box-shadow: 0 2px 6px rgba(0,0,0,.13);
+      transition: background 0.2s;
+    }
+    .scroll-top:hover {
+      background-color: #274c77;
+    }
+    .accordion-button:not(.collapsed) {
+      color: #0d6efd;
+      background-color: #e6ecf3;
+    }
+    .navbar-brand {
+      transition: color .18s;
+    }
+    .navbar-brand:hover {
+      color: #0d6efd !important;
+    }
+    /* Universal Navbar dropdown fixes */
+    .navbar-nav .dropdown-menu {
+      display: none !important;
+      visibility: hidden;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+    }
+    .navbar-nav .dropdown:hover .dropdown-menu {
+      display: block !important;
+      visibility: visible;
+      opacity: 1;
+      margin-top: 0;
+    }
+    .navbar-nav .dropdown:hover .dropdown-toggle::after {
+      transform: rotate(-180deg);
+    }
+    @media (max-width: 991.98px) {
+      .navbar-nav .dropdown-menu {
+        display: none !important;
+        visibility: hidden;
+        opacity: 0;
+      }
+      .navbar-nav .dropdown.show .dropdown-menu {
+        display: block !important;
+        visibility: visible;
+        opacity: 1;
+      }
+      .navbar-nav .dropdown:hover .dropdown-menu {
+        display: none !important;
+      }
+      .navbar-nav .dropdown-toggle::after {
+        transform: none;
+      }
     }
   </style>
 </head>
 <body>
-  <div id="navbar-placeholder"></div>
+  <!-- Universal Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">Amrit Thapa</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="../index.html#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="../index.html#experience">Work Experience</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown">
+              Projects
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
+              <li><a class="dropdown-item" href="FEA.html">FEA & Structural Simulation</a></li>
+              <li><a class="dropdown-item" href="WindTunnel.html">Closed-Circuit Wind Tunnel Design</a></li>
+              <li><a class="dropdown-item" href="EvaporativeCoolerAC.html">Evaporative Cooler AC with ANN Control</a></li>
+              <li><a class="dropdown-item" href="EvaporativeCondenser.html">Evaporative Cooled Condenser Retrofit</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="../index.html#certificates">Certificates</a></li>
+          <li class="nav-item"><a class="nav-link" href="../index.html#resume">Resume</a></li>
+          <li class="nav-item"><a class="nav-link" href="../index.html#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End Universal Navbar -->
 
+  <!-- PROJECT HERO -->
   <section class="project-hero" data-aos="fade-up">
     <h1>Closed Circuit Subsonic Wind Tunnel</h1>
     <p class="lead">Design & Analysis of a Low-Speed Wind Tunnel with Axial Fan</p>
   </section>
+
   <section class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Project Overview</h2>
     <p>
       For my undergraduate final year project, I undertook the complete <strong>design and analysis of a closed-circuit low-speed subsonic wind tunnel</strong>, including the selection and design of an axial fan to power the flow. The goal was to develop a reliable methodology, starting from literature review to analytical calculations, and then validating results with computational simulations.
     </p>
+
     <h2 class="section-title mt-5">Abstract</h2>
     <p>
       This research presents a comprehensive methodology for designing a subsonic closed-circuit wind tunnel, including the analytical and simulation-based approach to both the tunnel channel and the powering axial fan. The design targeted a test section of <strong>2.6 m width</strong> and <strong>1.84 m height</strong> with a maximum velocity of <strong>100 m/s</strong>. Key design and loss parameters were calculated and then validated through <strong>CFD simulations</strong> of the entire tunnel and the fan under different operating conditions. The wind tunnel achieved high flow uniformity (within 1% at mid-plane and 3% overall) and low turbulence intensity (&lt;0.17%). The axial fan, designed using isolated airfoil theory and free vortex methodology, achieved 89% analytical efficiency and 80.85% simulated efficiency at the design point.
     </p>
-    <h2 class="section-title mt-5">Key Results & Visuals</h2>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-      <div class="col text-center">
-        <img src="../images/WindTunnel/geometry.jpg" alt="Wind Tunnel Geometry" class="img-fluid project-image">
-        <p class="img-caption">1. Wind Tunnel Geometry</p>
+
+    <!-- INTERACTIVE: ACCORDION GALLERY WITH TWO SECTIONS -->
+    <div class="accordion mt-5" id="resultsAccordion">
+      <!-- WIND TUNNEL SECTION -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTunnel">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTunnel" aria-expanded="true" aria-controls="collapseTunnel">
+            Wind Tunnel: Key Results & Visuals
+          </button>
+        </h2>
+        <div id="collapseTunnel" class="accordion-collapse collapse show" aria-labelledby="headingTunnel" data-bs-parent="#resultsAccordion">
+          <div class="accordion-body px-2">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gallery-row g-4">
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/mesh whole channel.png" alt="Wind Tunnel Geometry" class="img-fluid project-image">
+                <p class="img-caption">1. Wind Tunnel Geometry</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/vel contour.png" alt="CFD Velocity Profile" class="img-fluid project-image">
+                <p class="img-caption">2. CFD Velocity Profile</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/pressure contour at mid plane.png" alt="CFD pressure Profile" class="img-fluid project-image">
+                <p class="img-caption">3. CFD Pressure Profile</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/mid plane test section contour rev.jpg" alt="Test Section velocity coutour at midplane" class="img-fluid project-image">
+                <p class="img-caption">4. Test Section velocity contour at midplane</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/test section sections position.jpg" alt="Test Section Positions" class="img-fluid project-image">
+                <p class="img-caption">5. Test Section velocity contour at different positions</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/TU vs test section height.png" alt="Turbulance Intesity in test section at different height" class="img-fluid project-image">
+                <p class="img-caption">6. Turbulence Intensity in test section at different height</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/TU vs test section width.png" alt="Turbulance Intesity in test section at different width" class="img-fluid project-image">
+                <p class="img-caption">7. Turbulence Intensity in test section at different width</p>
+              </div>
+            </div>
+            <ul class="mt-3">
+              <li><strong>Test section dimensions:</strong> 2.6 m (width) × 1.84 m (height)</li>
+              <li><strong>Max test section speed:</strong> 100 m/s (CFD: 103.25 m/s achieved)</li>
+              <li><strong>Flow uniformity:</strong> &lt;1% at mid-plane, &lt;3% overall</li>
+              <li><strong>Turbulence intensity:</strong> &lt;0.17% in test section</li>
+              <li><strong>Tools used:</strong> ANSYS Fluent, SolidWorks, MATLAB, Excel</li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="col text-center">
-        <img src="../images/WindTunnel/cfd-velocity.jpg" alt="CFD Velocity Profile" class="img-fluid project-image">
-        <p class="img-caption">2. CFD Velocity Profile at Test Section</p>
-      </div>
-      <div class="col text-center">
-        <img src="../images/WindTunnel/fan-blades.jpg" alt="Axial Fan Blade Design" class="img-fluid project-image">
-        <p class="img-caption">3. Axial Fan Blade Design</p>
-      </div>
-      <div class="col text-center">
-        <img src="../images/WindTunnel/flow-uniformity.jpg" alt="Flow Uniformity Plot" class="img-fluid project-image">
-        <p class="img-caption">4. Flow Uniformity Plot</p>
-      </div>
-      <div class="col text-center">
-        <img src="../images/WindTunnel/turbulence.jpg" alt="Turbulence Intensity" class="img-fluid project-image">
-        <p class="img-caption">5. Turbulence Intensity in Test Section</p>
+      <!-- AXIAL FAN SECTION -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFan">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFan" aria-expanded="false" aria-controls="collapseFan">
+            Axial Fan: Key Results & Visuals
+          </button>
+        </h2>
+        <div id="collapseFan" class="accordion-collapse collapse" aria-labelledby="headingFan" data-bs-parent="#resultsAccordion">
+          <div class="accordion-body px-2">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gallery-row g-4">
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/fan mesh.jpg" alt="Axial Fan Blade Design" class="img-fluid project-image">
+                <p class="img-caption">1. Axial Fan Blade Design</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/velocity vector 50 fan.png" alt="Velocity vector countour" class="img-fluid project-image">
+                <p class="img-caption">2. Velocity Vector Contour</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/pressure contour rev1.png" alt="Pressure Contour" class="img-fluid project-image">
+                <p class="img-caption">3. Pressure Contour</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/blade loading.png" alt="Blade Loading" class="img-fluid project-image">
+                <p class="img-caption">4. Blade Loading</p>
+              </div>
+              <div class="col text-center card-img-hover">
+                <img src="../images/Wind Tunnel/Inlet to outlet pressure rise.png" alt="Inlet to outlet pressure rise" class="img-fluid project-image">
+                <p class="img-caption">5. Inlet to Outlet Pressure Rise</p>
+              </div>
+            </div>
+            <ul class="mt-3">
+              <li><strong>Axial fan type:</strong> Single-stage, powered flow</li>
+              <li><strong>Analytical efficiency:</strong> 89%</li>
+              <li><strong>Simulated efficiency:</strong> 80.85%</li>
+              <li><strong>Pressure rise (ΔP):</strong> 853 Pa</li>
+              <li><strong>Design method:</strong> Isolated airfoil theory, free vortex methodology</li>
+              <li><strong>Tools used:</strong> ANSYS Fluent, SolidWorks, MATLAB, Excel</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <ul class="mt-4">
-      <li><strong>Test section dimensions:</strong> 2.6 m (width) × 1.84 m (height)</li>
-      <li><strong>Max test section speed:</strong> 100 m/s (CFD: 103.25 m/s achieved)</li>
-      <li><strong>Flow uniformity:</strong> &lt;1% at mid-plane, &lt;3% overall</li>
-      <li><strong>Turbulence intensity:</strong> &lt;0.17% in test section</li>
-      <li><strong>Axial fan:</strong> Single-stage, 89% analytical efficiency, 80.85% simulated efficiency, ΔP = 853 Pa</li>
-      <li><strong>Tools used:</strong> ANSYS Fluent, SolidWorks, MATLAB, Excel</li>
-    </ul>
+
     <h2 class="section-title mt-5">Category</h2>
     <p>
       Experimental Fluid Mechanics, Wind Tunnel Design, CFD Simulation, Fan Aerodynamics
@@ -102,17 +276,28 @@
   <footer class="bg-light text-center py-3 mt-4 border-top">
     &copy; 2025 Amrit Thapa. All rights reserved.
   </footer>
+
+  <!-- Scroll-to-Top Button -->
+  <button onclick="scrollToTop()" id="scrollBtn" class="scroll-top" title="Go to top">
+    &#8679;
+  </button>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
     AOS.init();
-  </script>
-  <script>
-    fetch('../navbar.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('navbar-placeholder').innerHTML = data;
-      });
+    // Scroll to top button
+    const scrollBtn = document.getElementById('scrollBtn');
+    window.onscroll = function () {
+      if (document.body.scrollTop > 180 || document.documentElement.scrollTop > 180) {
+        scrollBtn.style.display = "block";
+      } else {
+        scrollBtn.style.display = "none";
+      }
+    };
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
   </script>
 </body>
 </html>
