Removinf hover effect.

--- a/Projects/EvaporativeCondenser.html
+++ b/Projects/EvaporativeCondenser.html
@@ -7,20 +7,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f5f7fa; color: #333; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f5f7fa; color: #333;}
     .section-title { font-size: 2rem; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; color: #2c3e50; }
-    .project-hero { background: #e6ecf3; padding: 3rem 2rem 2rem 2rem; text-align: center; }
-    .project-hero h1 { font-weight: bold; color: #0d6efd; }
+    .project-hero { background: #e6ecf3; padding: 3rem 2rem 2rem 2rem; text-align: center;}
+    .project-hero h1 { font-weight: bold; color: #0d6efd;}
     .project-image { width: 100%; max-width: 340px; height: 180px; object-fit: cover; border: 1px solid #ccc; border-radius: 10px; margin-bottom: 0.7rem; background: #fff; transition: box-shadow 0.2s, transform 0.2s; cursor: pointer; box-shadow: 0 2px 8px rgba(80,100,120,0.06);}
     .project-image:hover { box-shadow: 0 8px 32px rgba(0,0,0,0.13); transform: scale(1.04);}
     .img-caption { font-size: .97rem; color: #4d5a6b; min-height: 48px; margin-bottom: 8px;}
-    .navbar-nav .dropdown-menu { display: none !important; visibility: hidden; opacity: 0; transition: opacity 0.3s ease-in-out; }
-    .navbar-nav .dropdown:hover .dropdown-menu { display: block !important; visibility: visible; opacity: 1; margin-top: 0;}
-    .navbar-nav .dropdown:hover .dropdown-toggle::after { transform: rotate(-180deg); }
-    @media (max-width: 991.98px) {
-      .navbar-nav .dropdown-menu { display: none !important; visibility: hidden; opacity: 0; }
-      .navbar-nav .dropdown.show .dropdown-menu { display: block !important; visibility: visible; opacity: 1; }
-    }
   </style>
 </head>
 <body>
@@ -58,22 +51,22 @@
       </div>
     </div>
   </nav>
-  <section class="project-hero" data-aos="fade-up">
+  <section class="project-hero">
     <h1>Evaporative Cooled Condenser Retrofit</h1>
     <p class="lead">Energy-Efficient Retrofit for Commercial Refrigeration</p>
   </section>
-  <section class="container py-4" data-aos="fade-up">
+  <section class="container py-4">
     <h2 class="section-title">Project Overview</h2>
     <p>
       This project details the retrofit of a commercial refrigeration condenser to an evaporative cooled system, enhancing efficiency and reducing electricity consumption. The system was upgraded from an air-cooled to an evaporative cooled condenser, tested before and after the retrofit, and analyzed for ROI and industrial energy impact.
     </p>
-    <h2 class="section-title mt-5">Key Features</h2>
+    <h2 class="section-title">Key Features</h2>
     <ul>
       <li>Designed and implemented evaporative cooling solution for an existing air-cooled condenser.</li>
       <li>Tested before and after retrofit for performance and energy savings.</li>
       <li>Analyzed ROI and payback period for industrial application.</li>
     </ul>
-    <h2 class="section-title mt-5">Visuals</h2>
+    <h2 class="section-title">Visuals</h2>
     <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col text-center">
         <img src="../images/EvaporativeCondenser/before.jpg" alt="Before Retrofit" class="project-image img-fluid">
@@ -84,18 +77,14 @@
         <p class="img-caption">After Retrofit</p>
       </div>
     </div>
-    <h2 class="section-title mt-5">Tools Used</h2>
+    <h2 class="section-title">Tools Used</h2>
     <p>Thermocouples, Data Logger, Excel, Cost Analysis</p>
-    <h2 class="section-title mt-5">Category</h2>
+    <h2 class="section-title">Category</h2>
     <p>Energy Audit, Industrial Cooling, Retrofit Technology</p>
   </section>
-  <footer class="bg-light text-center py-3 mt-4 border-top">
-    &copy; 2025 Amrit Thapa. All rights reserved.
-  </footer>
+  <footer class="bg-light text-center py-3 mt-4 border-top">&copy; 2025 Amrit Thapa. All rights reserved.</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+  <script>AOS.init();</script>
 </body>
 </html>
