--- a/Projects/EvaporativeCoolerAC.html
+++ b/Projects/EvaporativeCoolerAC.html
@@ -7,20 +7,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f5f7fa; color: #333; }
-    .section-title { font-size: 2rem; font-weight: 600; margin-top: 2.2rem; color: #2c3e50; }
-    .project-hero { background: #e6ecf3; padding: 3rem 2rem 2rem 2rem; text-align: center; }
-    .project-hero h1 { font-weight: bold; color: #0d6efd; }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f5f7fa; color: #333;}
+    .section-title { font-size: 2rem; font-weight: 600; margin-top: 2.2rem; color: #2c3e50;}
+    .project-hero { background: #e6ecf3; padding: 3rem 2rem 2rem 2rem; text-align: center;}
+    .project-hero h1 { font-weight: bold; color: #0d6efd;}
     .project-image { width: 100%; max-width: 340px; height: 180px; object-fit: cover; border: 1px solid #ccc; border-radius: 10px; margin-bottom: 0.7rem; background: #fff; transition: box-shadow 0.2s, transform 0.2s; cursor: pointer; box-shadow: 0 2px 8px rgba(80,100,120,0.06);}
     .project-image:hover { box-shadow: 0 8px 32px rgba(0,0,0,0.13); transform: scale(1.04);}
     .img-caption { font-size: .97rem; color: #4d5a6b; min-height: 48px; margin-bottom: 8px;}
-    .navbar-nav .dropdown-menu { display: none !important; visibility: hidden; opacity: 0; transition: opacity 0.3s ease-in-out; }
-    .navbar-nav .dropdown:hover .dropdown-menu { display: block !important; visibility: visible; opacity: 1; margin-top: 0;}
-    .navbar-nav .dropdown:hover .dropdown-toggle::after { transform: rotate(-180deg); }
-    @media (max-width: 991.98px) {
-      .navbar-nav .dropdown-menu { display: none !important; visibility: hidden; opacity: 0; }
-      .navbar-nav .dropdown.show .dropdown-menu { display: block !important; visibility: visible; opacity: 1; }
-    }
   </style>
 </head>
 <body>
@@ -58,11 +51,11 @@
       </div>
     </div>
   </nav>
-  <section class="project-hero" data-aos="fade-up">
+  <section class="project-hero">
       <h1>Evaporative Cooler AC with ANN Control</h1>
       <p class="lead">Hybrid Cooling System Optimized with Artificial Neural Network</p>
   </section>
-  <section class="container py-4" data-aos="fade-up">
+  <section class="container py-4">
       <h2 class="section-title">Project Overview</h2>
       <p>
           This project explores a hybrid air-conditioning system that combines evaporative cooling with traditional methods, managed using an Artificial Neural Network (ANN) controller for optimal performance and energy savings.
@@ -94,8 +87,6 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-      AOS.init();
-  </script>
+  <script>AOS.init();</script>
 </body>
 </html>
