--- a/Projects/FEA.html
+++ b/Projects/FEA.html
@@ -8,78 +8,13 @@
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f5f7fa;
-      color: #333;
-      line-height: 1.6;
-    }
-    .section-title {
-      font-size: 2rem;
-      font-weight: 600;
-      margin-top: 2rem;
-      margin-bottom: 1rem;
-      color: #2c3e50;
-    }
-    .project-hero {
-      background-color: #e6ecf3;
-      padding: 3rem 2rem;
-      text-align: center;
-    }
-    .project-hero h1 {
-      font-weight: bold;
-      color: #0d6efd;
-    }
-    .project-image {
-      width: 100%;
-      max-width: 400px;
-      height: 200px;
-      object-fit: contain;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-      margin-bottom: 0.7rem;
-      background: #fff;
-      cursor: pointer;
-      transition: box-shadow 0.2s, transform 0.2s;
-    }
-    .project-image:hover {
-      box-shadow: 0 8px 32px rgba(0,0,0,0.13);
-      transform: scale(1.04);
-    }
-    .img-caption {
-      font-size: 0.98rem;
-      color: #555;
-      margin-bottom: 1.5rem;
-      min-height: 40px;
-    }
-    .navbar-nav .dropdown-menu {
-      display: none !important;
-      visibility: hidden;
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
-    }
-    .navbar-nav .dropdown:hover .dropdown-menu {
-      display: block !important;
-      visibility: visible;
-      opacity: 1;
-      margin-top: 0;
-    }
-    .navbar-nav .dropdown:hover .dropdown-toggle::after {
-      transform: rotate(-180deg);
-    }
-    @media (max-width: 991.98px) {
-      .navbar-nav .dropdown-menu {
-        display: none !important;
-        visibility: hidden;
-        opacity: 0;
-      }
-      .navbar-nav .dropdown.show .dropdown-menu {
-        display: block !important;
-        visibility: visible;
-        opacity: 1;
-      }
-    }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f5f7fa; color: #333; line-height: 1.6;}
+    .section-title { font-size: 2rem; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; color: #2c3e50; }
+    .project-hero { background-color: #e6ecf3; padding: 3rem 2rem; text-align: center;}
+    .project-hero h1 { font-weight: bold; color: #0d6efd;}
+    .project-image { width: 100%; max-width: 400px; height: 200px; object-fit: contain; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.08); margin-bottom: 0.7rem; background: #fff;}
+    .project-image:hover { box-shadow: 0 8px 32px rgba(0,0,0,0.13); transform: scale(1.04);}
+    .img-caption { font-size: 0.98rem; color: #555; margin-bottom: 1.5rem; min-height: 40px;}
   </style>
 </head>
 <body>
@@ -117,8 +52,27 @@
       </div>
     </div>
   </nav>
-  <!-- ... (your page content remains as before) ... -->
-
+  <section class="project-hero">
+    <h1>Nitsche's Method in FEA</h1>
+    <p class="lead">Handling Multi-Patch Geometries with Non-Conforming Meshes</p>
+  </section>
+  <section class="container py-4">
+    <h2 class="section-title">Project Overview</h2>
+    <p>This project explores the application of <strong>Nitsche's Method</strong> in Finite Element Analysis (FEA) to address challenges in multi-patch geometries with non-conforming meshes. Nitsche's formulation adds interface terms to enforce continuity and boundary conditions while preserving stability and accuracy, even across disconnected mesh patches.</p>
+    <p>The approach is particularly powerful in problems involving <strong>linear elasticity</strong> and <strong>complex geometrical domains</strong>. Key mathematical operators such as the jump and average are implemented to bridge mesh gaps. This project demonstrates how Nitsche's Method enables high-fidelity solutions in computational mechanics where standard FEA would otherwise struggle.</p>
+    <h2 class="section-title mt-5">Visual Results</h2>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <div class="col text-center"><img src="../images/FEA project/Geometry.png" alt="Geometry" class="project-image img-fluid"><p class="img-caption">1. L-shaped Geometry</p></div>
+      <div class="col text-center"><img src="../images/FEA project/Meshing.jpg" alt="Meshing" class="project-image img-fluid"><p class="img-caption">2. Meshing of the Geometry</p></div>
+      <div class="col text-center"><img src="../images/FEA project/Loading and BC .png" alt="Loading and BC" class="project-image img-fluid"><p class="img-caption">3. Loading and Boundary Conditions</p></div>
+      <div class="col text-center"><img src="../images/FEA project/DeformedShape.jpg" alt="Displacement Plot" class="project-image img-fluid"><p class="img-caption">4. Displacement Plot</p></div>
+      <div class="col text-center"><img src="../images/FEA project/Stressplot.jpg" alt="Stress Plot" class="project-image img-fluid"><p class="img-caption">5. Stress Plot</p></div>
+      <div class="col text-center"><img src="../images/FEA project/Plot to show no discontinuity.jpg" alt="Continuity Plot" class="project-image img-fluid"><p class="img-caption">6. Stress Plot from -30 to 30 to Observe Solution Continuity</p></div>
+    </div>
+    <p class="mt-4"><strong>Tools Used:</strong> MATLAB</p>
+    <p><strong>Category:</strong> Computational Mechanics, Structural FEA, Advanced FEM Techniques</p>
+  </section>
+  <footer class="bg-light text-center py-3 mt-4 border-top">&copy; 2025 Amrit Thapa. All rights reserved.</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
