--- a/index.html
+++ b/index.html
@@ -1,134 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amrit Thapa | Mechanical Engineer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f5f7fa;
-            color: #333;
-            line-height: 1.6;
-        }
-        .hero {
-            background-color: #d9e3f0;
-            padding: 4rem 2rem;
-            text-align: center;
-        }
-        .hero img {
-            width: 180px;
-            height: 180px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 1rem;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .section-title {
-            font-size: 2rem;
-            font-weight: 600;
-            margin-top: 2rem;
-            margin-bottom: 1rem;
-            color: #2c3e50;
-        }
-        .navbar-nav {
-            margin-left: auto;
-        }
-        .work-entry {
-            border-left: 4px solid #0d6efd;
-            padding-left: 1rem;
-            margin-bottom: 2rem;
-        }
-        .work-entry h5 {
-            color: #0d6efd;
-        }
-        .work-entry ul {
-            padding-left: 1.2rem;
-        }
-        .cert-img {
-            max-height: 250px;
-            object-fit: cover;
-            border: 1px solid #ddd;
-        }
-        .navbar-nav .dropdown-menu {
-            display: none !important;
-            visibility: hidden;
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out;
-        }
-        .navbar-nav .dropdown:hover .dropdown-menu {
-            display: block !important;
-            visibility: visible;
-            opacity: 1;
-            margin-top: 0;
-        }
-        .navbar-nav .dropdown:hover .dropdown-toggle::after {
-            transform: rotate(-180deg);
-        }
-        @media (max-width: 991.98px) {
-            .navbar-nav .dropdown-menu {
-                display: none !important;
-                visibility: hidden;
-                opacity: 0;
-            }
-            .navbar-nav .dropdown.show .dropdown-menu {
-                display: block !important;
-                visibility: visible;
-                opacity: 1;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Amrit Thapa | Mechanical Engineer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <style>
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f5f7fa; color: #333; line-height: 1.6; }
+    .hero { background-color: #d9e3f0; padding: 4rem 2rem; text-align: center; }
+    .hero img { width: 180px; height: 180px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem; box-shadow: 0 4px 8px rgba(0,0,0,0.1);}
+    .section-title { font-size: 2rem; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; color: #2c3e50; }
+    .navbar-nav { margin-left: auto; }
+    .work-entry { border-left: 4px solid #0d6efd; padding-left: 1rem; margin-bottom: 2rem;}
+    .work-entry h5 { color: #0d6efd;}
+    .work-entry ul { padding-left: 1.2rem;}
+    .cert-img { max-height: 250px; object-fit: cover; border: 1px solid #ddd;}
+  </style>
 </head>
 <body>
-    <!-- UNIVERSAL NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Amrit Thapa</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Work Experience</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"
-                            href="#"
-                            id="projectsDropdown"
-                            role="button"
-                            data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Projects
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
-                            <li><a class="dropdown-item" href="Projects/FEA.html">FEA & Structural Simulation</a></li>
-                            <li><a class="dropdown-item" href="Projects/WindTunnel.html">Closed-Circuit Wind Tunnel Design</a></li>
-                            <li><a class="dropdown-item" href="Projects/EvaporativeCoolerAC.html">Evaporative Cooler AC with ANN Control</a></li>
-                            <li><a class="dropdown-item" href="Projects/EvaporativeCondenser.html">Evaporative Cooled Condenser Retrofit</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- END UNIVERSAL NAVBAR -->
-
-    <!-- ...your content stays the same... -->
-
-    <footer class="bg-light text-center py-3 mt-4 border-top">
-        &copy; 2025 Amrit Thapa. All rights reserved.
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+  <!-- UNIVERSAL NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Amrit Thapa</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">Work Experience</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle"
+               href="#"
+               id="projectsDropdown"
+               role="button"
+               data-bs-toggle="dropdown"
+               aria-expanded="false">
+              Projects
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="projectsDropdown">
+              <li><a class="dropdown-item" href="Projects/FEA.html">FEA & Structural Simulation</a></li>
+              <li><a class="dropdown-item" href="Projects/WindTunnel.html">Closed-Circuit Wind Tunnel Design</a></li>
+              <li><a class="dropdown-item" href="Projects/EvaporativeCoolerAC.html">Evaporative Cooler AC with ANN Control</a></li>
+              <li><a class="dropdown-item" href="Projects/EvaporativeCondenser.html">Evaporative Cooled Condenser Retrofit</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
+          <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- ... your content here ... -->
+  <footer class="bg-light text-center py-3 mt-4 border-top">
+    &copy; 2025 Amrit Thapa. All rights reserved.
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
