update digital cred1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       padding: 4rem 2rem;
     }
     .hero img {
-      width: 180px; height: 180px;
+      width: 180px;
+      height: 180px;
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 1rem;
@@ -48,6 +49,9 @@
     }
     .work-entry h5 {
       color: #0d6efd;
+    }
+    .work-entry ul {
+      padding-left: 1.2rem;
     }
 
     /* — Certificates & Badges — */
@@ -108,74 +112,125 @@
   <section id="about" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">About Me</h2>
     <p>
-      Mechanical Engineer (EIT) with industry experience in utility design, mechanical analysis, and CFD simulation...
+      Mechanical Engineer (EIT) with industry experience in utility design, mechanical analysis, and CFD simulation. Currently working as Engineer I at Techserv Engineering and Consulting, I have demonstrated the ability to deliver PE-ready utility designs and significantly boost project throughput. My background includes extensive use of SolidWorks, MATLAB, ANSYS, and OpenFOAM, with a strong foundation in thermal-fluid systems, automation, and control integration. I am driven by solving real-world engineering problems with innovative and data-driven solutions.
     </p>
   </section>
 
   <!-- Work Experience -->
   <section id="experience" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Work Experience</h2>
-    <!-- ... your work entries ... -->
+
+    <div class="work-entry">
+      <h5>Engineer I – Techserv Engineering and Consulting, TX (2024–Present)</h5>
+      <ul>
+        <li>Designed utility pole configurations and created PE-ready field packages.</li>
+        <li>Reviewed stress reports using SPIDA and ensured NESC compliance.</li>
+        <li>Generated cost estimates and collaborated with field teams for accuracy.</li>
+      </ul>
+    </div>
+
+    <div class="work-entry">
+      <h5>Engineering Intern – InergyX Building Solutions, TX (2023–2024)</h5>
+      <ul>
+        <li>Conducted blower door and duct leakage tests under PE supervision.</li>
+        <li>Used HVAC software and drones to identify and improve efficiency.</li>
+        <li>Participated in project management and client communication.</li>
+        <li>Contributed to internal innovation projects for energy auditing.</li>
+      </ul>
+    </div>
+
+    <div class="work-entry">
+      <h5>Graduate Researcher – Entegra Sources Pvt. Ltd, Kathmandu (May–Aug 2021)</h5>
+      <ul>
+        <li>Designed a 5 tons/hr Plastic Cutter and Shredder for urban recycling initiatives.</li>
+        <li>Led remote simulations for diverse BPO-based engineering projects.</li>
+        <li>Used AutoCAD, SolidWorks, and ANSYS to develop optimized solutions.</li>
+      </ul>
+    </div>
+
+    <div class="work-entry">
+      <h5>Mechanical Design Intern – Surya Nepal Pvt. Ltd, Simara (Sep–Nov 2019)</h5>
+      <ul>
+        <li>Improved automated packaging efficiency by 6% via geometry optimization.</li>
+        <li>Engineered a cost-effective hydraulic press for tobacco cake quality control.</li>
+      </ul>
+    </div>
   </section>
 
   <!-- Certificates -->
   <section id="certificates" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Certificates</h2>
     <div class="row g-4">
-      <!-- existing certificates here -->
+      <div class="col-md-4 text-center">
+        <img src="images/Coursera Semiconducter Packaging Manufacturing.jpg" alt="Semiconductor Certificate" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/EIT.jpg" alt="EIT Certificate" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>Engineer in Training (EIT)</strong><br>Texas Board of Professional Engineers (2023)</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/Courseera MATLAB.jpg" alt="MATLAB Certificate" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>Introduction to Programming with MATLAB</strong><br>Vanderbilt University (2023)</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/openfoam.jpg" alt="OpenFOAM Certificate" class="img-fluid rounded cert-img shadow">
+        <p class="mt-2"><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
+      </div>
     </div>
   </section>
 
+  <!-- Digital Credentials -->
   <section id="digital-credentials" class="container py-4" data-aos="fade-up">
-  <h2 class="section-title">Digital Credentials</h2>
-  <p class="mb-4">
-    I’ve received three digital credentials from UT Tyler. Click any badge to verify on Validity.id:
-  </p>
-  <div class="row g-4 justify-content-center">
-    <!-- 1) MSME Degree -->
-    <div class="col-12 col-sm-6 col-md-4 text-center">
-      <img src="images/badges/msme-degree-badge.png"
-           alt="MSME Degree Badge"
-           class="img-fluid rounded cert-img shadow mb-2">
-      <p>
-        <strong>Master of Science in Mechanical Engineering</strong><br>
-        College of Engineering, UT Tyler<br>
-        Issued: 05/04/2024<br>
-        <a href="https://validity.id/verify/SHARED_LINK" target="_blank">
-          Verify Credential &rarr;
-        </a>
-      </p>
+    <h2 class="section-title">Digital Credentials</h2>
+    <p class="mb-4">
+      I’ve received three digital credentials from UT Tyler. Click any badge to verify on Validity.id:
+    </p>
+    <div class="row g-4 justify-content-center">
+      <!-- 1) MSME Degree -->
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/msme-degree-badge.png"
+             alt="MSME Degree Badge"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p>
+          <strong>Master of Science in Mechanical Engineering</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/verify/SHARED_LINK" target="_blank">
+            Verify Credential &rarr;
+          </a>
+        </p>
+      </div>
+      <!-- 2) Thermal-Fluid Systems Certificate -->
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/thermal-fluid-badge.png"
+             alt="Thermal-Fluid Systems Badge"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p>
+          <strong>Graduate Certificate: Thermal-Fluid Systems</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/verify/SHARED_LINK" target="_blank">
+            Verify Credential &rarr;
+          </a>
+        </p>
+      </div>
+      <!-- 3) Systems & Controls Certificate -->
+      <div class="col-12 col-sm-6 col-md-4 text-center">
+        <img src="images/badges/systems-control-badge.png"
+             alt="Systems & Controls Badge"
+             class="img-fluid rounded cert-img shadow mb-2">
+        <p>
+          <strong>Graduate Certificate: Systems &amp; Controls</strong><br>
+          College of Engineering, UT Tyler<br>
+          Issued: 05/04/2024<br>
+          <a href="https://validity.id/verify/SHARED_LINK" target="_blank">
+            Verify Credential &rarr;
+          </a>
+        </p>
+      </div>
     </div>
-    <!-- 2) Thermal-Fluid Systems Certificate -->
-    <div class="col-12 col-sm-6 col-md-4 text-center">
-      <img src="images/badges/thermal-fluid-badge.png"
-           alt="Thermal-Fluid Systems Badge"
-           class="img-fluid rounded cert-img shadow mb-2">
-      <p>
-        <strong>Graduate Certificate: Thermal-Fluid Systems</strong><br>
-        College of Engineering, UT Tyler<br>
-        Issued: 05/04/2024<br>
-        <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024" target="_blank">
-          Verify Credential &rarr;
-        </a>
-      </p>
-    </div>
-    <!-- 3) Systems & Controls Certificate -->
-    <div class="col-12 col-sm-6 col-md-4 text-center">
-      <img src="images/badges/systems-control-badge.png"
-           alt="Systems & Controls Badge"
-           class="img-fluid rounded cert-img shadow mb-2">
-      <p>
-        <strong>Graduate Certificate: Systems &amp; Controls</strong><br>
-        College of Engineering, UT Tyler<br>
-        Issued: 05/04/2024<br>
-        <a href="https://validity.id/verify/SHARED_LINK" target="_blank">
-          Verify Credential &rarr;
-        </a>
-      </p>
-    </div>
-  </div>
-</section>
+  </section>
 
   <!-- Resume -->
   <section id="resume" class="container py-4" data-aos="fade-up">
@@ -200,6 +255,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init();</script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
